# web-puri-project

./: .editorconfig  .gitignore  404.html  README.md  _config.yml  document.md  index.html  next.config.ts  package-lock.json  package.json  sitemap.xml  style.css  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
.cursor/: setting.json
.cursor/prompts/: components.txt
.cursor/promtps/: add-logic.mdc  implement-from-docs.mdc  refactor.mdc
.cursor/rules/: add-logic-from-docs.mdc  coding-style.mdc  implement-from-docs.mdc  refactor.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  build-project.yml  build-pwa.yml  build.yml  cargo.yml  debug-build.yml  development-build.yml  development.yml  project-dev-build.yml  project-release-build.yml  pwa-dev-build.yml  release-build.yml  release.yml  vite.yml
app/: index.html  manifest.json
app/style/: main.css
apps/: 404.html  index.html
apps/app/: global.d.ts  index.tsx  notes.txt  package.json  vite.config.ts
apps/landing/: globals.css  index.html  layout.tsx  package-lock.json  package.json  page.tsx  style.css  todo.txt
apps/pwa/: index.html  package.json  todo.txt  vite.config.ts
assets/: manifest.json
backup/: development.yml  release.yml
docs/: CODING_STYLE.md  note.txt  todo.txt
docs/components/: PuriTag.md  (+9 more)
dummies/: dummy-1.html
dummy/: dummy-2.html
frames/: index.yml
landing/: next.config.ts  package-lock.json  package.json
posing/: index.yml
pwa/: index.html  package.json
release/: message.md
release-info/: version.yml
scripts/: copy-assets-all.mjs  copy-assets-min.mjs
src/: App.module.css  App.tsx  CMakeLists.txt  app.html  global.d.ts  index.html  index.tsx  manifest.json  memo.txt  sample-1.html  sample.html  sample_2.html  sw.ts  todo.txt  tsconfig.json  vite.config.ts  webpack.config.js
src/ai_sample/: App.tsx  index.html
src/ai_sample/components/: PurikuraCamera.tsx
src/ai_sample/styles/: globals.css
src/app/: App.module.css  App.tsx  index.html  manifest.json  sw.ts
src/app/app/: sw.js  sw.ts
src/app/assets/: posing.yaml
src/app/features/edit/utils/face-editing/: eye.cpp
src/app/script/: detection.js  face-landmarks-worker.js  main.js  segmentation-worker.js  selfie-segmentation.glsl  sw.js
src/app/script/app-version-manager/: index.js
src/app/script/detection/: detection.js  face-landmarks-worker.js  index.js  segmentation-worker.js  selfie-segmentation.glsl
src/app/script/face-detection/: face-landmarks-worker.js  index.js
src/app/script/output/: index.js  print.js
src/app/script/preserve/: index.js
src/app/script/save/: version.js
src/app/script/test/: detection.html
src/app/style/: index.js  main.tsx
src/app/style/pages/: index.js  index.tsx
src/app/test/: detection.html
src/app/utils/puri-images-class/: puri-class.ts
src/assets/background/: index.yaml
src/assets/editing/pens/: index.yaml
src/assets/editing/stamp/: index.yaml
src/assets/frame/: index.yaml
src/assets/pens/: index.yaml
src/assets/posing/: index.yaml
src/assets/stamp/: index.yaml
src/assets/ui/: color.md
src/components/: index.tsx  todo.txt
src/demo/: bbox.html  landmarks.html  ver1.html  ver2.html
src/demo-and-test/background/: script.js
src/demo-and-test/demo/: background-u2net.html
src/demo-and-test/demo/background/: index.html  script.js
src/demo-and-test/demo/bbox/: index.html
src/demo-and-test/detection.js/: index.html  script.js  style.css
src/demo/bbox/: script.js
src/demo/landmarks/: index.html  script.js
src/demo/mediapipe-face-landmarker-task-for-web/: LICENSE.txt  README.md
src/features/: pages.tsx
src/features/album/: memo.txt  note.txt
src/features/edit/utils/face-detection/: detected-face-class.ts  face-landmarks-worker.js  index.js  memo.txt  segmentation-worker.js
src/features/edit/utils/face-editing/: CMakeLists.txt  memo.txt
src/features/print/: memo.txt  todo.txt
src/features/print/utils/print/: index.ts
src/features/puri-information/: note.txt
src/features/result/utils/print/: printElement.ts
src/features/update-alert/: UpdateAlert.tsx  use-update-alert.ts  use-update-alert.tsx
src/features/update-alert/release/: version.yml
src/features/update-alert/utils/: app-version-manager.ts  fetch-text-file.ts
src/figma_ai/components/: PurikuraCamera.tsx  PurikuraDecorator.tsx
src/function/: index.js  sw.js
src/functions/: app-version-manager.ts  sw.ts
src/functions/face-detection/: face-landmarks-worker.js
src/functions/face-editing/: CMakeLists.txt  nose.cpp
src/functions/output/: index.js
src/functions/print/: index.js
src/landing/: package.json  todo.txt
src/landing/demos/landmarks/: index.html
src/libs/: FileSaver.min.js  jszip.js
src/pages/: index.tsx
src/pwa/: index.html  package-lock.json  package.json  vite.config.ts
src/pwa/app/: App.module.css  App.tsx
src/pwa/features/update-alert/: use-update-alert.ts
src/script/: detection.js
src/style/: style.css
src/test/: App.tsx  detection.html
src/utils/: resolve-base-url.ts
src/utils/puri-images-class/: puri-class.ts  puri-images-class.ts  todo.txt
src/utils/shoot/: todo.txt
src/webpages/: index.html  style.css
tests/: debug.js  hoge.html
(+310 files in other folders)
